# yt-search

./: .gitignore  Cargo.toml  README.md  examples.csv  setup.sh
documents/: design-document.md  input.csv  youtube-search-params-example.md  youtube-search-params.md
src/: errors.rs  lib.rs  logging.rs  models.rs  parser.rs  search.rs  utils.rs
