[package]
name = "youtube_search_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
log4rs = "1.3.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "socks"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
