[package]
name = "yt-search"
version = "0.1.1"
authors = ["Tyler <tkoz.dev@gmail.com>"]
description = "A simple YouTube search library"
license = "MIT"
repository = "https://github.com/tkozzer/yt-search"
edition = "2021"

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
log4rs = "1.3.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "socks"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
